# development

./: BRUH.md  EVENT_DRIVEN_PLAN.md  PROJECT_NAMES.md  README.md  docker-compose.override.yaml  docker-compose.yaml  planned_technologies.md
.github/workflows/: super-linter.yml
docs/: README.md
event-driven-demo-go/: Makefile  README.md  go.mod  plan.md  planning.txt
event-driven-demo-go/schema/experimentation/: order.proto
event-driven-demo-go/schema/protobufs/: order.proto
event-driven-demo-go/schema/protos/: order.proto
eventdriven-golang/: go.mod
eventdriven-golang/Planning/: planning.md
eventdriven-golang/internal/: customer.go  inventory.go
experimentation/eventdriven-sagas/: README.md
experimentation/eventdriven-sagas/python/http-basic-order-choreography-json/: client.py  customers.py  events.py  orders.py  pyproject.toml
experimentation/eventdriven-sagas/python/http-basic-order-orchestration-json/: client.py  customers.py  events.py  pyproject.toml
experimentation/eventdriven-sagas/python/http-simple-order-choreography-json/: customers.py  events.py  inventory.py  orders.py  pyproject.toml
experimentation/gateway-exper1/: buf.gen.yaml  compose.yaml  go.mod  go.sum  main.go
experimentation/gateway-exper2-auth/: Ingress routing to multiple services on EKS - r-kubernetes.url  Nginx reverse proxy with istio ingress - General - Discuss Istio.url  buf.gen.yaml  buf.work.yaml  note.txt  todo.md
experimentation/request-coalescing/go/: go.mod
lab/: README.txt
lab/concepts/event-driven-sagas/python/kafka-simple-order-choreography-json/: pyproject.toml
lab/concepts/request-coalescing/py/version_1/: README.md  pyproject.toml
panels/: skaffold.yaml
planning/: MANAGEMENT_IDEA.md  README.txt
planning/stocklet/: TEMP.md
projects/: stocklet-copy-README.md
projects/basketify/: pyproject.toml
projects/formulator/: .gitignore  DELETEAFTER.txt  README.md  formulator.sln
projects/outboxie/: plan.txt  resources.txt
projects/rust-urlshortener/: Cargo.toml  Dockerfile  docker-compose.yaml
projects/rust-urlshortener/src/: main.rs  routes.rs
projects/stocklet/: LICENSE  Makefile  README.md  TODO.txt  delete_after_dev_notes.txt  go.mod  go.sum
protobufs/: comment.proto  post.proto  user.proto
services/auth-service/: Dockerfile  Makefile  README.md  pyproject.toml
services/comment-service/: Dockerfile  Makefile  README.md  pyproject.toml
services/frontend/: Dockerfile  README.md  package.json
services/gateway-service/: Makefile  README.md
services/panel-service/: .env.example  Dockerfile  Makefile  README.md
services/post-service/: Dockerfile  Makefile  README.md
services/user-service/: .env.example  Dockerfile  README.md  package-lock.json  package.json
stocklet/: Makefile  README.md  TEMP.md  buf.gen.yaml  go.mod  go.sum
stocklet/cmd/: tools.go
stocklet/deploy/: .gitkeep  compose.yaml  docker-compose.yaml
(+1092 files in other folders)
