[package]
name = "url_shortener"
version = "0.1.0"
edition = "2021"
authors = ["Declan Teevan <dt@hexolan.com"]
license = "Apache-2.0"
repository = "https://github.com/hexolan/url_shortener"

[dependencies]
axum = "0.7.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
