[tool.poetry]
name = "http-basic-order-orchestration-json"
version = "0.1.0"
description = "Basic HTTP Orchestration Saga Pattern (No Broker + JSON)"
authors = ["Declan <declan@hexolan.dev"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.2"
httpx = "^0.25.0"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
