[tool.poetry]
name = "http-simple-order-choreography-json"
version = "0.1.0"
description = ""
authors = ["Declan <declan@hexolan.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.2"
httpx = "^0.25.0"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
