[tool.poetry]
name = "saga_experiment"
version = "0.1.0"
description = ""
authors = ["Declan <declan@hexolan.dev>"]

[tool.poetry.dependencies]
python = "^3.8"
aiokafka = "^0.8.1"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
httpx = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
