[tool.poetry]
name = "request-coalescing-demo"
version = "0.1.0"
description = "Simple demonstration of request coalescing in asynchronous Python"
authors = ["Declan <declan@hexolan.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.103.2"
pydantic = "^2.4.2"
databases = {extras = ["sqlite"], version = "^0.8.0"}
uvicorn = "^0.23.2"

[tool.poetry.group.dev.dependencies]
httpx = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
